--- a/index.html
+++ b/index.html
@@ -1292,7 +1292,7 @@
             <h1>CHRONOSX</h1>
         </div>
         <div class="trading-subtitle">
-            <h1>Buy ETH, BSC, Base & Arbitrum tokens using only Solana - no bridging needed</h1>
+            <h1>Use your Solana wallet to trade across Ethereum, Base, BSC & Arbitrum.</h1>
         </div>
         <div class="trading-video">
             <div class="ambient-glow"></div>
@@ -1325,16 +1325,16 @@
             <div class="tab-content active" id="elite-speed">
                 <div class="elite-speed-content">
                     <h2 class="speed-title">Unmatched Speed & Execution</h2>
-                    <p class="speed-subtitle">Milliseconds make Millionaires</p>
+                    <p class="speed-subtitle">Execution That Outpaces the Market</p>
 
                     <div class="speed-metrics-tabs">
                         <div class="metric-tab">
-                            <div class="metric-value-tab">Custom RPC Infrastructure</div>
+                            <div class="metric-value-tab">MEV protection built-in</div>
                             <div class="metric-label-tab">Privacy & Reliability</div>
                         </div>
                         <div class="metric-tab">
-                            <div class="metric-value-tab">147ms Transaction Latency</div>
-                            <div class="metric-label-tab">Real-time transactions</div>
+                            <div class="metric-value-tab">0 Slot Transaction Latency</div>
+                            <div class="metric-label-tab">Same-Block Settlement</div>
                         </div>
                         <div class="metric-tab">
                             <div class="metric-value-tab">6.5x Faster than competitors</div>
@@ -1354,7 +1354,7 @@
                 </div>
                 <div class="rewards-content">
                     <div class="rewards-text">
-                        <p>Experience a revolutionary reward system where every trade, every interaction, and every milestone unlocks real value through a points system. Our multi-tier system ensures that traders are recognized and rewarded based on their engagement and activity.</p>
+                        <p>rade, engage, and climb tiers to unlock bigger rewards.</p>
 
                     </div>
 
@@ -1378,7 +1378,7 @@
                             </div>
                         </div>
                         <div class="podium-subtitle">
-                            <p>Real, tangible prizes such as iPhones, watches, laptops, court side sports tickets, paid vacations trips, cars, and much more!</p>
+                            <p>Earn real prizes — from iPhones and luxury watches to laptops, courtside tickets, dream vacations, cars, and more.</p>
                         </div>
                     </div>
                 </div>
@@ -1388,11 +1388,11 @@
             <div class="tab-content" id="gamification">
                 <div class="gamification-content">
                     <h3>Level Up Your Trading</h3>
-                    <p>Unlock achievements, earn badges, and compete with traders worldwide in our gamified ecosystem</p>
+                    <p>Unlock rewards, climb leaderboards, and compete globally in our gamified trading experience.</p>
 
                     <div class="badges-preview">
                         <div class="gamification-description">
-                            <p>Chronos' Battle Royale turns trading into a high-stakes tournament where users compete in real-time challenges across formats like time-based sprints, volume races, PNL percentages, and more. Our KOL Wars elevate the game by letting top crypto influencers lead teams from their own communities in ultimate competitive showdowns.</p>
+                            <p>Chronos’ Battle Royale makes trading a high-stakes competition, with communities facing off in real-time sprints, volume races, PnL challenges, and more..</p>
                         </div>
                         <div class="">
                             <div class="badge-icon">
@@ -1442,22 +1442,22 @@
     <section class="protection-section">
         <div class="container">
             <h2 class="protection-section-title">Architecture</h2>
-            <p class="section-subtitle">We built what we couldn't find: a platform where security and ownership come first. Your assets remain 100% on-chain across multiple blockchains through our non-custodial architecture</p>
+            <p class="section-subtitle">We built what didn’t exist — a trusted, cross-chain, mobile-first platform where security, ownership, and speed come first.</p>
 
             <div class="protection-grid">
                 <div class="protection-item">
                     <h3>Transparency First</h3>
-                    <p>Public Founders with Professional Sport Careers - Real names, real accountability</p>
+                    <p>Built by Pro Athletes, Top Quant Traders, and Engineers from IBM and Chainlink Hackathon Winners</p>
                 </div>
 
                 <div class="protection-item">
                     <h3>Non-Custodial by Design</h3>
-                    <p>Assets remain fully on-chain and always user-controlled - Delivering true Piece of mind in a space full of uncertainty</p>
+                    <p>Fully on-chain. Always user-controlled. Peace of mind in any market.</p>
                 </div>
 
                 <div class="protection-item">
-                    <h3>Audited architecture with protocol-grade security</h3>
-                    <p>Engineered for resilience at every layer – from smart contracts to cross-chain infrastructure. Audited by Hacken.io</p>
+                    <h3>Protocol-Grade Security, Independently Audited</h3>
+                    <p>Resilient by design, from smart contracts to cross-chain infrastructure — audited by Hacken.io and Sec3.</p>
                 </div>
 
             </div>
@@ -1468,9 +1468,9 @@
     <section class="chronos-gives">
         <div class="container">
             <h2 class="gives-section-title">How Chronos Gives Back &mdash; Trading for Good</h2>
-            <p>Chronos donates 2-3% of <strong>Monthly Recurring Revenue (MRR)</strong> to donate.gg and other impactful initiatives aimed at creating real-world change.
+            <p>Chronos channels a portion of<strong>Monthly Recurring Revenue (MRR)</strong> into charitable initiaves, supporting the Solana ecosystem and driving real-world impact across the global ecosystem.
             <br>All donations are <strong>publicly tracked on-chain</strong>, ensuring transparency and trust. Your trading doesn't just benefit you - it contributes to <strong>global causes</strong> that matter.
-            <br>Chronos isn't built for <strong>speed, rewards and competition</strong> - it's built to help <strong>change</strong> the world.</p>
+            <br>Beyond<strong>speed, rewards and competition</strong> Chronos is built to make a <strong>lasting</strong> impact.</p>
         </div>
     </section>
 
