--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,7 @@
                 </div>
                 <div class="rewards-content">
                     <div class="rewards-text">
-                        <p>rade, engage, and climb tiers to unlock bigger rewards.</p>
+                        <p>Trade, engage, and climb tiers to unlock bigger rewards.</p>
 
                     </div>
 
@@ -1468,9 +1468,9 @@
     <section class="chronos-gives">
         <div class="container">
             <h2 class="gives-section-title">How Chronos Gives Back &mdash; Trading for Good</h2>
-            <p>Chronos channels a portion of<strong>Monthly Recurring Revenue (MRR)</strong> into charitable initiaves, supporting the Solana ecosystem and driving real-world impact across the global ecosystem.
+            <p>Chronos channels a portion of<strong> Monthly Recurring Revenue (MRR)</strong> into charitable initiaves, supporting the Solana ecosystem and driving real-world impact across the global ecosystem.
             <br>All donations are <strong>publicly tracked on-chain</strong>, ensuring transparency and trust. Your trading doesn't just benefit you - it contributes to <strong>global causes</strong> that matter.
-            <br>Beyond<strong>speed, rewards and competition</strong> Chronos is built to make a <strong>lasting</strong> impact.</p>
+            <br>Beyond<strong> speed, rewards and competition</strong> Chronos is built to make a <strong>lasting</strong> impact.</p>
         </div>
     </section>
 
